--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                             type="url" 
                             id="webhookUrl" 
                             required
+                            autocomplete="off"
                             placeholder="https://discord.com/api/webhooks/..."
                             class="pl-10 w-full bg-gray-700 border border-gray-600 rounded-lg py-2 px-4 text-gray-200 placeholder-gray-400 focus:outline-none input-glow transition duration-200"
                         >
